Dustbin with some test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(cpp_waste_recycling_bekor)
 
 set(CMAKE_CXX_STANDARD 11)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wno-error=unused-parameter")
+
 set(SOURCE_FILES
         main.cpp
         Garbage.cpp Garbage.h
@@ -10,6 +12,6 @@ set(SOURCE_FILES
         PlasticGarbage.cpp PlasticGarbage.h
         DustbinContentError.hpp
         Dustbin.cpp Dustbin.h
-        DustbinTests.hpp)
+        DustbinTests.hpp Dustbin9000.cpp Dustbin9000.h MetalGarbage.cpp MetalGarbage.h)
 
 add_executable(cpp_waste_recycling_bekor ${SOURCE_FILES})
